--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://9d8a33bd-980e-47c0-b71b-73b020a4ef23.preview.emergentagent.com
 WDS_SOCKET_PORT=443
